force-app/main/default/objects/Kinetics_Jobs_Invites__e/Kinetics_Jobs_Invites__e.object-meta.xml
<CustomObject>
    <description>Used to hold the data required for creating Kinetic Job and sending Kinetic invites</description>
    <label>Kinetics Job Invite</label>
    <pluralLabel>Kinetic Jobs Invites</pluralLabel>
</CustomObject>