force-app/main/default/objects/Kinetics_Jobs_Invites__e/fields/Contact_Ids__c.field-meta.xml
<CustomField>
    <fullName>Contact_Ids__c</fullName>
    <description>Used to collect Contact ID to whom we have to send the invite</description>
    <label>Contact Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>