force-app/main/default/objects/Kinetics_Jobs_Invites__e/fields/Days_Before_Request_Expires__c.field-meta.xml
<CustomField>
    <fullName>Days_Before_Request_Expires__c</fullName>
    <description>Specify number of days after which the invite will expire</description>
    <label>Days Before Request Expires</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>