force-app/main/default/objects/Kinetics_Jobs_Invites__e/fields/Days_Between_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Days_Between_Reminder__c</fullName>
    <description>Specify number of days between two reminders</description>
    <label>Days Between Reminder</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>