force-app/main/default/objects/Kinetics_Jobs_Invites__e/fields/Days_For_First_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Days_For_First_Reminder__c</fullName>
    <description>Specify number of days before first reminder is sent</description>
    <label>Days For First Reminder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>