force-app/main/default/objects/Kinetics_Jobs_Invites__e/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <defaultValue>&quot;SMS&quot;</defaultValue>
    <description>Define delivery method for invites</description>
    <label>Delivery Method</label>
    <length>20</length>
    <type>Text</type>
</CustomField>