force-app/main/default/objects/Kinetics_Jobs_Invites__e/fields/Do_Send_Auto_Reminders__c.field-meta.xml
<CustomField>
    <fullName>Do_Send_Auto_Reminders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specify if Kinetic should send auto reminders</description>
    <label>Do Send Auto Reminders</label>
    <type>Checkbox</type>
</CustomField>