force-app/main/default/objects/Kinetics_Jobs_Invites__e/fields/Email_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Id__c</fullName>
    <description>Specify Email template needs to be used for sending invite</description>
    <label>Email Template Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>