force-app/main/default/objects/Kinetics_Jobs_Invites__e/fields/Form_Renderer_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_Renderer_Page_URL__c</fullName>
    <description>Form Renderer Page URL - used to specify Form Renderer Page URL if required</description>
    <label>Form Renderer Page URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>