force-app/main/default/objects/Kinetics_Jobs_Invites__e/fields/Kinetic_Form_Id__c.field-meta.xml
<CustomField>
    <fullName>Kinetic_Form_Id__c</fullName>
    <description>Please populate Kinetic Form Id which we need to used for sending invite</description>
    <label>Kinetic Form Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>