force-app/main/default/objects/Kinetics_Jobs_Invites__e/fields/SMS_Template__c.field-meta.xml
<CustomField>
    <fullName>SMS_Template__c</fullName>
    <label>SMS Template</label>
    <length>250</length>
    <type>Text</type>
</CustomField>